--- a/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.html
+++ b/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.html
@@ -119,6 +119,11 @@
                     <td>{{this.convert('processing')}}</td>
                     <td>{{list.value.processing}}</td>
                 </tr>
+
+                <tr>
+                    <td style="font-style: normal;font-weight: 700;font-size: 13px;color: #106DB6;">{{this.convert('total')}}</td>
+                    <td>{{list.value.total}}</td>
+                </tr>
             </ng-template>
 
             <ng-template pTemplate="paginatorleft" let-state>
