--- a/src/app/main/report/report-status-contract/report-status-contract.component.html
+++ b/src/app/main/report/report-status-contract/report-status-contract.component.html
@@ -76,7 +76,7 @@
             <ng-template pTemplate="body" let-list let-row="rowIndex">
                 <tr>
                     <ng-container style="background-color: #EEF7FF;" *ngIf="row == 0">
-                        <td *ngIf="row == 0" style="font-style: normal;font-weight: 800;font-size: 13px;">{{this.orgName}}</td>
+                        <td style="font-style: normal;font-weight: 800;font-size: 13px;">{{this.orgName}}</td>
                         <td *ngFor="let i of Arr(cols.length - 1).fill(1)"></td>
                     </ng-container>
 
@@ -84,8 +84,8 @@
                         <td>{{list.name}}</td>
                         <td>{{list.typeName}}</td>
                         <td>{{this.convert(list.status)}}</td>
-                        <td>{{list.organization.name}}</td>
-                        <td *ngFor="let i of Arr(maxParticipants).fill(1)">
+                        <td>{{list.participants[0].name}}</td>
+                        <td *ngFor="let i of Arr(maxParticipants - 1).fill(1)">
                             <span *ngIf="list.participants[i]">
                                 {{ list.participants[i].name }}
                             </span>
@@ -98,10 +98,10 @@
             </ng-template>
 
             <ng-template pTemplate="paginatorleft" let-state>
-                <span style="color: white !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
+                <span style="color: white !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? (state.totalRecords > 0 ? state.totalRecords - 1 : 0) : state.first+state.rows}} / {{state.totalRecords > 0 ? state.totalRecords - 1 : 0}}</span>
               </ng-template>
             <ng-template pTemplate="paginatorright" let-state>
-                <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
+                <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ?(state.totalRecords > 0 ? state.totalRecords - 1 : 0) : state.first+state.rows}} / {{state.totalRecords > 0 ? state.totalRecords - 1 : 0}}</span>
             </ng-template>
         </p-table>
     </div>
