--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -45,21 +45,22 @@
 
         <!--Button-->
         <div class="col-md-6 btn_search">
-            <button class="btn btn-lg btn-block btn_submit">{{'btn.report' | translate }}</button>
-            <button (click)="export()" class="btn btn-lg btn-block btn_submit">Export</button>
+            <button class="btn btn-lg btn-block btn_submit" (click)="export(false)">{{'btn.report' | translate }}</button>
+            <button (click)="export(true)" class="btn btn-lg btn-block btn_submit">Export</button>
         </div>
     </div>
 
 
     <!--Bảng dữ liệu-->
     <div class="row" style="padding-top: 20px;">
-        <p-table [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
+        <p-table [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true" [scrollable]="true" 
+        scrollDirection="horizontal">
 
             <!--header-->
-            <ng-template pTemplate="header">
+            <ng-template pTemplate="headergrouped">
                 <!--header 1-->
                 <tr>
-                    <th *ngFor="let col of cols" [style]='col.style' [colSpan]="col.colspan" [rowSpan]="col.rowspan">
+                    <th *ngFor="let col of cols" [(style)]='col.style' [(colSpan)]="col.colspan" [(rowSpan)]="col.rowspan">
                       {{col.header | translate}}
                     </th>
                 </tr>
@@ -72,15 +73,48 @@
                 </tr>
             </ng-template>
 
-            <ng-template pTemplate="body" let-list>
-                <tr class="subheader-row">
-                    <!-- <td>{{list.product}}</td> -->
-                    <!-- <td *ngFor="let col of mergeCol; let colIndex = index">
-                        <span *ngIf="col.id == 1">{{list.product}}</span>
-                    </td> -->
+            <ng-template pTemplate="body" let-list let-row="rowIndex">
+                <tr>
+                    <ng-container style="background-color: #EEF7FF;" *ngIf="row == 0">
+                        <td style="font-style: normal;font-weight: 800;font-size: 13px;">{{this.orgName}}</td>
+                        <td *ngFor="let i of Arr(mergeCol.length - 1).fill(1)"></td>
+                    </ng-container>
+
+                    <ng-container *ngIf="row > 0">
+                        <td>{{list.name}}</td>
+                        <td>{{list.typeName}}</td>
+                        <td>{{list.contractNo}}</td>
+                        <td>{{list.code}}</td>
+                        <td>{{list.refId}}</td>
+                        <td>{{list.createdAt}}</td>
+                        <td>{{list.signTime}}</td>
+                        <td>{{list.status}}</td>
+                        <td>{{list.cancelDate}}</td>
+                        <td>{{list.customer.organization.name}}</td>
+                        <td>{{list.customer.name}}</td>
+                        
+                        <td>{{list.participants[0].type}}</td>
+                        <td>{{list.participants[0].name}}</td>
+                        <td>{{'Người xem xét'}}</td>
+                        <td>{{'Người ký'}}</td>
+                        <td>{{'Văn thư'}}</td>
+
+
+                        <ng-container *ngFor="let i of Arr(maxParticipants - 1).fill(1)">
+                            <td>{{this.getValue(list,i,'type')}}</td>
+                            <td>{{this.getValue(list,i,'name')}}</td>
+                            <td>{{'Người xem xét'}}</td>
+                            <td>{{'Người ký'}}</td>
+                            <td>{{'Văn thư'}}</td> 
+                        </ng-container>
+                    </ng-container>
                 </tr>
             </ng-template>
         </p-table>
     </div>
     
 </div>
+
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
+    <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
+</ngx-spinner>
