fix form đổi mật khẩu

--- a/src/app/main/dialog/reset-password-dialog/reset-password-dialog.component.html
+++ b/src/app/main/dialog/reset-password-dialog/reset-password-dialog.component.html
@@ -1,7 +1,6 @@
 <div class="container-fluid">
     <div style="text-align: center; font-weight: bold">
       <h3 style="color: #106DB6; font-family: inherit;">{{'change.password' | translate}}</h3>
-      <span>{{'weak.pass' | translate}}</span>
     </div>
 
     <form [formGroup]="addForm" class="content">
@@ -95,7 +94,7 @@
         </div>
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button *ngIf="data.weakPass" class="cancel-button" (click)="dialog.closeAll()" type="button">{{'cancel' | translate}}</button>
+            <button *ngIf="!this.data.weakPass" class="cancel-button" (click)="dialog.closeAll()" type="button">{{'cancel' | translate}}</button>
             <button class="save-button" (click)="onSubmit()">{{ "btn.save" | translate }}</button>
         </div>
     </form>
