--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -57,7 +57,6 @@
               <td>{{list.email}}</td>
               <td>{{list.phone}}</td>
               <td>{{list.organization.name}}</td>
-              <!-- <td>{{list.status==1?'Hoạt động':'Không hoạt động'}}</td> -->
 
               <td *ngIf="list.status == 1">{{'unit.active' | translate}}</td>
               <td *ngIf="list.status != 1">{{'unit.inactive' | translate}}</td>
@@ -81,5 +80,9 @@
 <div *ngIf="!isQLND_01 && !isQLND_02 && !isQLND_03 && !isQLND_04">
   {{'no.role' | translate}}
 </div>
+
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
+  <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
+</ngx-spinner>
  
   
