--- a/src/app/main/dialog/reset-password-dialog/reset-password-dialog.component.html
+++ b/src/app/main/dialog/reset-password-dialog/reset-password-dialog.component.html
@@ -1,7 +1,6 @@
 <div class="container-fluid">
     <div style="text-align: center; font-weight: bold">
       <h3 style="color: #106DB6; font-family: inherit;">{{'change.password' | translate}}</h3>
-      <h4 style="font-family: inherit;">{{'error.password.valid' | translate}}</h4>
     </div>
 
     <form [formGroup]="addForm" class="content">
@@ -92,6 +91,10 @@
                     <strong>{{errorDetail | translate}}</strong>
                 </p>
             </div>
+        </div>
+
+        <div class="row" style="padding-top: 5px;text-align: center; font-weight: bold">
+            <h5 style="font-family: inherit;">{{'error.password.valid' | translate}}</h5>
         </div>
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
