--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -85,10 +85,10 @@
             </div>
 
             <div class="form-group" *ngIf="captcha">
-              <label>Enter captcha</label>
+              <label>Captcha</label>
               <div id="preview" class="preview" #previewCaptcha></div>
               <div class="input-line"> 
-                <input formControlName="captchaName" class="input-captcha" type="text" placeholder="Enter captcha text"/>
+                <input formControlName="captchaName" class="input-captcha" type="text" placeholder="{{'enter.captcha' | translate}}"/>
                 <button (click)="generateCaptcha()">
                   <i class="fa fa-refresh"></i>
                 </button>
@@ -211,10 +211,10 @@
             </div>
 
             <div class="form-group" *ngIf="captcha">
-              <label>Enter captcha</label>
+              <label>Captcha</label>
               <div id="preview" class="preview" #previewCaptcha></div>
               <div class="input-line"> 
-                <input formControlName="captchaName" class="input-captcha" type="text" placeholder="Enter captcha text"/>
+                <input formControlName="captchaName" class="input-captcha" type="text" placeholder="{{'enter.captcha' | translate}}"/>
                 <button (click)="generateCaptcha()">
                   <i class="fa fa-refresh"></i>
                 </button>
