fix tích hợp api báo cáo số lượng theo trạng thái

--- a/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.html
+++ b/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.html
@@ -92,37 +92,37 @@
 
                 <tr>
                     <td>{{this.convert('rejected')}}</td>
-                    <td>{{list.value.rejected}}</td>
+                    <td>{{list.rejected}}</td>
                 </tr>
 
                 <tr>
                     <td>{{this.convert('cancel')}}</td>
-                    <td>{{list.value.canceled}}</td>
+                    <td>{{list.canceled}}</td>
                 </tr>
 
                 <tr>
                     <td>{{this.convert('expired')}}</td>
-                    <td>{{list.value.expired}}</td>
+                    <td>{{list.expired}}</td>
                 </tr>
 
                 <tr>
                     <td>{{this.convert('prepare_expires')}}</td>
-                    <td>{{list.value.prepare_expires}}</td>
+                    <td>{{list.prepare_expires}}</td>
                 </tr>
 
                 <tr>
                     <td>{{this.convert('processed')}}</td>
-                    <td>{{list.value.processed}}</td>
+                    <td>{{list.processed}}</td>
                 </tr>
 
                 <tr>
                     <td>{{this.convert('processing')}}</td>
-                    <td>{{list.value.processing}}</td>
+                    <td>{{list.processing}}</td>
                 </tr>
 
                 <tr>
                     <td style="font-style: normal;font-weight: 700;font-size: 13px;color: #106DB6;">{{this.convert('total')}}</td>
-                    <td>{{list.value.total}}</td>
+                    <td>{{list.total}}</td>
                 </tr>
             </ng-template>
 
