fix bug ng trong luong xly

--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
@@ -229,7 +229,7 @@
       </div>
       <div class="footer-btn">
         <button (click)="handleCancel()">{{"exit" | translate}}</button>
-        <button (click)="UpdateHandler()">{{"btn.update" | translate}}</button>
+        <button (click)="UpdateHandler()" class="update-btn">{{"btn.update" | translate}}</button>
       </div>
 
     </div>
