--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.scss
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.scss
@@ -561,6 +561,10 @@
     text-align: center; 
     margin: 15px;
   }
+  .update-btn{
+    color: white;
+    background-color: #106DB6 !important; 
+  }
   .invalid{
     color: red;
   }
