fix giao dien thong tin to chuc

--- a/src/app/main/unit/detail-unit/detail-unit.component.html
+++ b/src/app/main/unit/detail-unit/detail-unit.component.html
@@ -83,7 +83,7 @@
     </div>
 
     <div *ngIf="this.site === 'KD'">
-      <div class="row" style="padding-top: 2px">
+      <div class="row" style="padding-top: 15px">
         <div class="header">
           <h3 class="label-header">{{ "package.information" | translate }}</h3>
         </div>
@@ -147,7 +147,8 @@
             </span>
           </div>
         </div>
-
+      </div>
+      <div class="row" style="padding-top: 10px">
         <div class="col-md-6">
           <div class="label_item">
             {{ "timestamp.used" | translate }}
@@ -165,7 +166,8 @@
             </span>
           </div>
         </div>
-
+      </div>
+      <div class="row" style="padding-top: 10px">
         <div class="col-md-6">
           <div class="label_item">
             {{ "ceca.used" | translate }}
@@ -183,8 +185,8 @@
             </span>
           </div>
         </div>
-
       </div>
+      
     </div>
 
     <div class="row" style="justify-content: center; padding-top: 10px">
