fix html injection

--- a/src/app/main/role/detail-role/detail-role.component.html
+++ b/src/app/main/role/detail-role/detail-role.component.html
@@ -9,7 +9,7 @@
                     <div class="col-md-12">  
                         <div class="label_item">{{'role.name' | translate}}</div>
                         <div>
-                            <div [innerHTML]="name" class="input_text"></div>
+                            <div [innerText]="name" class="input_text"></div>
                         </div>
                     </div>
                 </div>
@@ -17,7 +17,7 @@
                     <div class="col-md-12">  
                         <div class="label_item">{{'role.code' | translate}}</div>
                         <div>
-                            <div [innerHTML]="code" class="input_text"></div>
+                            <div [innerText]="code" class="input_text"></div>
                         </div>
                     </div>
                 </div>
@@ -25,7 +25,7 @@
                     <div class="col-md-12">  
                         <div class="label_item">{{'role.note' | translate}}</div>
                         <div>
-                            <div [innerHTML]="role" class="input_text"></div>
+                            <div [innerText]="role" class="input_text"></div>
                         </div>
                     </div>
                 </div>
