--- a/src/app/main/unit/detail-unit/detail-unit.component.html
+++ b/src/app/main/unit/detail-unit/detail-unit.component.html
@@ -9,7 +9,7 @@
       <div class="col-md-12">
         <div class="label_item">{{ "unit.name" | translate }}</div>
         <div>
-          <div [innerHTML]="name" class="input_text"></div>
+          <div [innerText]="name" class="input_text"></div>
         </div>
       </div>
     </div>
@@ -19,14 +19,14 @@
       <div class="col-md-6">
         <div class="label_item">{{ "unit.id" | translate }}</div>
         <div>
-          <div [innerHTML]="id" class="input_text"></div>
+          <div [innerText]="id" class="input_text"></div>
         </div>
       </div>
 
       <div class="col-md-6">
         <div class="label_item">{{ "unit.short-name" | translate }}</div>
         <div>
-          <div [innerHTML]="short_name" class="input_text"></div>
+          <div [innerText]="short_name" class="input_text"></div>
         </div>
       </div>
     </div>
@@ -36,14 +36,14 @@
       <div class="col-md-6">
         <div class="label_item">{{ "unit.code" | translate }}</div>
         <div>
-          <div [innerHTML]="code" class="input_text"></div>
+          <div [innerText]="code" class="input_text"></div>
         </div>
       </div>
 
       <div class="col-md-6">
         <div class="label_item">{{ "unit.email" | translate }}</div>
         <div>
-          <div [innerHTML]="email" class="input_text"></div>
+          <div [innerText]="email" class="input_text"></div>
         </div>
       </div>
     </div>
@@ -52,14 +52,14 @@
       <div class="col-md-6">
         <div class="label_item">{{ "unit.parent" | translate }}</div>
         <div>
-          <div [innerHTML]="parent_id" class="input_text"></div>
+          <div [innerText]="parent_id" class="input_text"></div>
         </div>
       </div>
 
       <div class="col-md-6">
         <div class="label_item">{{ "unit.phone" | translate }}</div>
         <div>
-          <div [innerHTML]="phone" class="input_text"></div>
+          <div [innerText]="phone" class="input_text"></div>
         </div>
       </div>
     </div>
@@ -68,7 +68,7 @@
       <div class="col-md-6">
         <div class="label_item">{{ "Mã số thuế" | translate }}</div>
         <div>
-          <div [innerHTML]="taxCode" class="input_text"></div>
+          <div [innerText]="taxCode" class="input_text"></div>
         </div>
       </div>
 
