--- a/src/app/main/contract-type/detail-contract-type/detail-contract-type.component.html
+++ b/src/app/main/contract-type/detail-contract-type/detail-contract-type.component.html
@@ -7,7 +7,7 @@
             <div class="col-md-12">  
                 <div class="label_item">{{'contract-type.name' | translate}}</div>
                 <div>
-                    <div [innerHTML]="name" class="input_text"></div>
+                    <div [innerText]="name" class="input_text"></div>
                 </div>
             </div>
         </div>
@@ -16,7 +16,7 @@
             <div class="col-md-12">
                 <div class="label_item">{{'contract-type.code' | translate}}</div>
                 <div>
-                    <div [innerHTML]="code" class="input_text"></div>
+                    <div [innerText]="code" class="input_text"></div>
                 </div>
             </div>
         </div>
@@ -25,7 +25,7 @@
             <div class="col-md-12">
                 <div class="label_item">{{'contract-type.ceca' | translate}}</div>
                 <div>
-                    <div [innerHTML]="ceca_push" class="input_text"></div>
+                    <div [innerText]="ceca_push" class="input_text"></div>
                 </div>
             </div>
         </div>
