--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -23,17 +23,17 @@
             </div>
         </div>
 
-        <!-- <div *ngIf="filter_status == 4">
+        <div *ngIf="filter_status == 4">
             <div *ngIf="this.typeDisplay === 'signOne'" class="col-md-1 btn_search">
-                <button (click)="signMany()" class="btn btn-lg btn-block btn_submit">{{'download.multi'| translate}}</button>
+                <button (click)="downloadMany()" class="btn btn-lg btn-block btn_submit">{{'download.multi'| translate}}</button>
             </div>
 
-            <div *ngIf="this.typeDisplay === 'signMany'" style="padding-top: 10px;">
-                <button class="btn_submit" (click)="signManyContract()">{{'contract.down'| translate}}</button>
+            <div *ngIf="this.typeDisplay === 'downloadMany'" style="padding-top: 10px;">
+                <button class="btn_submit" (click)="downloadManyContract()">{{'contract.down'| translate}}</button>
 
                 <button class="btn_submit" (click)="cancelDownloadMany()">{{'cancel'| translate}}</button>
             </div>
-        </div> -->
+        </div>
     </div>
 
     <div class="row list_header" *ngIf="pageTotal > 0;">
@@ -47,6 +47,10 @@
         <div *ngIf="this.typeDisplay === 'signMany'" class="col-md-3">
             <input id="all" name="all" type="checkbox" (click)="toggle()" />
         </div>
+
+        <!-- <div *ngIf="this.typeDisplay === 'downloadMany'" class="col-md-3">
+            <input id="all" name="all" type="checkbox" (click)="toggle()" />
+        </div> -->
 
     </div>
 
@@ -204,6 +208,89 @@
             </div>
         </div>
     </div>
+     <!--Danh sách tất cả hợp đồng có thể download.multi -->
+     <div *ngIf="this.typeDisplay === 'downloadMany'">
+        <div class="item_contract" *ngFor="let item of contracts; let index1 = index">
+            <div *ngIf="filter_status == 4">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="row">
+                            <div class="col-md-11">
+                                <div class="item_contract_name" (click)="openDetail(item.contractId)">{{item.participant.contract.name}}</div>
+
+                                <!--Cac ben ky-->
+                                <div class="row" *ngFor="let itemPar of sortParticipant(item.participant.contract.participants); let index = index">
+                                    <div class="item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}</div>
+                                </div>
+
+                                <!--Trang thai hop dong-->
+                                <div class="row">
+                                    <div class="item_contract_infor">{{'contract.status.v2' | translate}}:
+                                        <span class="status_blue">{{item.contractStatus | pipe | translate}} {{getNameStatusCeca(item.contractStatus, item.contractCecaPush, item.contractCecaStatus) | translate}}</span>
+                                    </div>
+                                </div>
+
+                                <!--Trạng thái-->
+                                <div class="row">
+                                    <div class="item_contract_infor">{{'contract.status' | translate}}:
+                                        <span class="status_blue" *ngIf="item.status == 1 && item.role == 1">{{'contract.wait-lead' | translate}}</span>
+                                        <span class="status_blue" *ngIf="item.status == 1 && item.role == 2">{{'contract.wait-view' | translate}}</span>
+                                        <span class="status_blue" *ngIf="item.status == 1 && item.role == 3">{{'contract.wait-sign' | translate}}</span>
+                                        <span class="status_blue" *ngIf="item.status == 1 && item.role == 4">{{'contract.wait-document' | translate}}</span>
+                                        <span class="status_blue" *ngIf="item.status == 2 && item.role == 1">{{'contract.leaded' | translate}}</span>
+                                        <span class="status_blue" *ngIf="item.status == 2 && item.role == 2">{{'contract.viewed' | translate}}</span>
+                                        <span class="status_blue" *ngIf="item.status == 2 && item.role == 3">{{'contract.signed' | translate}}</span>
+                                        <span class="status_blue" *ngIf="item.status == 2 && item.role == 4">{{'contract.documented' | translate}}</span>
+                                        <span class="status_blue" *ngIf="item.status == 3 && item.role == 1">{{'contract.lead-refused' | translate}}</span>
+                                        <span class="status_blue" *ngIf="item.status == 3 && item.role == 2">{{'contract.view-refused' | translate}}</span>
+                                        <span class="status_blue" *ngIf="item.status == 3 && item.role == 3">{{'contract.sign-refused' | translate}}</span>
+                                        <span class="status_blue" *ngIf="item.status == 3 && item.role == 4">{{'contract.document-refused' | translate}}</span>
+                                    </div>
+                                </div>
+
+                                <!--user.sign-type-->
+                                <div class="row">
+                                    <div *ngIf="this.filter_status === 1" class="col-md-11 item_contract_infor">{{'user.sign-type' | translate}}:
+                                        <span class="status_blue">{{item.sign_type[0].name}}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-2 calendar_create">
+                        <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.contractCreateTime | date: 'dd/MM/yyyy HH:mm'}}</span></div>
+                    </div>
+
+                    <div class="col-md-2 calendar_deadline">
+                        <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.contractSignTime | date: 'dd/MM/yyyy'}}</span></div>
+                    </div>
+
+                    <div class="col-md-3 item_icon">
+                        <div style="display: flex; justify-content: center;">
+                            <div class="div_icon" *ngIf="item.status == 1 && item.role == 1 && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
+                                <button type="button" class="btn btn-outline-dark btn_submit" (click)="openCoordinatorContract(item)">{{'contract.lead' | translate}}</button>
+                            </div>
+
+                            <!--Checkbox-->
+                            <!--role = 3: ký, role = 4: đóng dấu-->
+                            <div class="div_icon" *ngIf="item.status == 1 && (item.role == 3 || item.role == 4) && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
+                                <div class="col-md-1 calendar_create">
+                                    <div>
+                                        <input name="item" type="checkbox" value="{{item.contractId}}" [(ngModel)]="item.checked" (change)="toggleOne(item, index1)" />
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="div_icon" *ngIf="this.typeDisplay == 'downloadMany'">
+                                <input id="all" name="all" type="checkbox" (click)="toggle()" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </div>
 
     <!--Danh sách tất cả hợp đồng có thể sign.multi -->
     <div *ngIf="this.typeDisplay === 'signMany'">
@@ -358,7 +445,7 @@
         </div>
     </div>
 
-    <div *ngIf="this.typeDisplay === 'signOne'" class="contract_footer">
+    <div *ngIf="this.typeDisplay === 'signOne'|| this.typeDisplay === 'downloadMany'" class="contract_footer">
         <div class="footer_title"></div>
         <div class="footer_pagination">
             <pagination-controls *ngIf="pageTotal > 0" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
