--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
@@ -54,7 +54,7 @@
               </div>
             </div>
             <div class="participants__name" >
-              <div class="label_detail text-color" *ngIf="this.id_sign_type !== 2 && this.status !== 1">
+              <div class="label_detail text-color" *ngIf="this.id_sign_type !== 2">
                 <div>
                   <input type="radio" (change)="changeTypeSign(1)" name="checkPhoneMailOrgSigner_"
                     value="{{this.login_by}}" />
