--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<<div class="container-fluid">
     <h3 style="text-align: center; color: #106DB6">{{'contract_processing_flow' | translate}}</h3>
     <div style="max-height: 405px; overflow: auto;font-size: 14px">
         <div style="display: flex; justify-content: space-between; text-align: left; margin-bottom: 10px">
