--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -55,6 +55,10 @@
             </p>
           </div>
 
+          <div class="form-group" style="padding-top: 5px;text-align: center; font-weight: bold">
+            <h5 style="font-family: inherit;">{{'error.password.valid' | translate}}</h5>
+        </div>
+
           <div class="form-group" style="text-align: center;">
             <button (click)="sendResetPassword();" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">{{'btn.sendRequest' | translate}}</button>
           </div>
