--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -210,7 +210,7 @@
     </div>
      <!--Danh sách tất cả hợp đồng có thể download.multi -->
      <div *ngIf="this.typeDisplay === 'downloadMany'">
-        <div class="item_contract" *ngFor="let item of contracts; let index1 = index">
+        <div class="item_contract" *ngFor="let item of contractDownloadList | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}; let index1 = index">
             <div *ngIf="filter_status == 4">
                 <div class="row">
                     <div class="col-md-5">
@@ -283,7 +283,7 @@
                             </div>
 
                             <div class="div_icon" *ngIf="this.typeDisplay == 'downloadMany'">
-                                <input id="all" name="all" type="checkbox" (click)="toggle()" />
+                                <input id="all" name="all" type="checkbox" (click)="toggleOneDownload(item, index1)" />
                             </div>
                         </div>
                     </div>
