--- a/src/app/main/user/detail-user/detail-user.component.html
+++ b/src/app/main/user/detail-user/detail-user.component.html
@@ -61,16 +61,34 @@
                     </div>
                     <div class="content-body">
                         <div [hidden]="imgSignPCSelect">
-                            <input id="attachFileSignature" type="file" accept=".jpg, .png, .jpge" style="display: none;" />
+                            <input id="attachFileSignature" type="file" accept=".jpg, .png, .jpeg" style="display: none;" />
                             <div class="select-contract container-img-file">
                                 <div class="upload-image-region d-flex flex-column container-img-file-1">
-                                    <img src="assets/img/img-icon.svg" alt="#" width="50px">
+                                    <img src="assets/img/img-icon.svg" alt="#" width="20px">
                                     <div class="text-choose-file">{{'image.empty' | translate}}</div>
                                 </div>
                             </div>
                         </div>
                         <div class="image-div">
                             <img *ngIf="imgSignPCSelect" [src]="imgSignPCSelect" alt="" style="display: block;margin: 10px auto;max-height: 30vh;max-width: 100%;">
+                        </div>
+                    </div>
+
+                    <div class="label-header">
+                        {{'sign.file-image.mark' | translate}}
+                    </div>
+                    <div class="content-body">
+                        <div [hidden]="imgSignPCSelectMark">
+                            <input id="attachFileSignature" type="file" accept=".jpg, .png, .jpeg" style="display: none;" />
+                            <div class="select-contract container-img-file">
+                                <div class="upload-image-region d-flex flex-column container-img-file-1">
+                                    <img src="assets/img/img-icon.svg" alt="#" width="20px">
+                                    <div class="text-choose-file">{{'image.empty' | translate}}</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="image-div">
+                            <img *ngIf="imgSignPCSelectMark" [src]="imgSignPCSelectMark" alt="" style="display: block;margin: 10px auto;max-height: 30vh;max-width: 100%;">
                         </div>
                     </div>
                 </div>
