--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -77,18 +77,38 @@
             </div>
             <div class="content-body">
                 <div [hidden]="imgSignPCSelect">
-                    <input id="attachFileSignature" type="file" accept=".jpg, .png, .jpge" (change)="fileChangedAttach($event)" style="display: none;" />
-                    <div class="select-contract container-img-file" (click)="addFileAttach()">
+                    <input id="attachFileSignature" type="file" accept=".jpg, .png, .jpge" (change)="fileChangedAttach($event,'sign')" style="display: none;" />
+                    <div class="select-contract container-img-file" (click)="addFileAttach('sign')">
                         <div class="upload-image-region d-flex flex-column container-img-file-1">
-                            <img src="assets/img/img-icon.svg" alt="#" width="50px">
+                            <img src="assets/img/img-icon.svg" alt="#" width="20px">
+                            <div class="text-choose-file">{{'choose.sign.file.image' | translate}}</div>
+                            <div class="text-support-extension">{{'support.format.PNG.JPG.JPEG' | translate}}</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="image-div">
+                    <img *ngIf="imgSignPCSelect" [src]="imgSignPCSelect" alt="" style="display: block;margin: 10px auto;max-height: 30vh;max-width: 100%;">
+                    <img class="hidden_img" (click)="addFileAttach('sign')" src="assets/img/img-icon.svg" width="15" height="15" />
+                </div>
+            </div>
+
+            <div class="label-header" style="margin-top: 10px">
+                {{'sign.file-image.mark' | translate}}
+            </div>
+            <div class="content-body">
+                <div [hidden]="imgSignPCSelectMark">
+                    <input id="attachFileMark" type="file" accept=".jpg, .png, .jpeg" (change)="fileChangedAttach($event,'mark')" style="display: none;" />
+                    <div class="select-contract container-img-file" (click)="addFileAttach('mark')">
+                        <div class="upload-image-region d-flex flex-column container-img-file-1">
+                            <img src="assets/img/img-icon.svg" alt="#" width="20px">
                             <div class="text-choose-file">{{'choose.sign.file.image' | translate}}</div>
                             <div class="text-support-extension">{{'support.format.PNG.JPG.JPGE' | translate}}</div>
                         </div>
                     </div>
                 </div>
                 <div class="image-div">
-                    <img *ngIf="imgSignPCSelect" [src]="imgSignPCSelect" alt="" style="display: block;margin: 10px auto;max-height: 30vh;max-width: 100%;">
-                    <img class="hidden_img" (click)="addFileAttach()" src="assets/img/img-icon.svg" width="30" height="30" />
+                    <img *ngIf="imgSignPCSelect" [src]="imgSignPCSelectMark" alt="" style="display: block;margin: 10px auto;max-height: 30vh;max-width: 100%;">
+                    <img class="hidden_img" (click)="addFileAttach('mark')" src="assets/img/img-icon.svg" width="15" height="15" />
                 </div>
             </div>
         </div>
