chon ngon ngu sms khi dieu phoi hop dong

--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.scss
@@ -417,3 +417,41 @@ input[type=number] {
 //::ng-deep .mat-form-field-flex {
 //  background-color: white;
 //}
+.db_icon_english {
+  height: 20px;
+  width: 30px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../../../../../../../assets/img/icon_english.svg);
+}
+.db_icon_vietnam {
+  height: 20px;
+  width: 30px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../../../../../../../assets//img/icon_vietnam.svg);
+}
+.drop_menu{
+  border-color: #C2E4FF;
+  padding: 0;
+  font-size: inherit;
+  right: 10px;
+  left: unset !important;
+}
+.language{
+  margin-left: 20px;
+}
+.switch-language{
+  padding: 5px;
+}
+//::ng-deep .mat-form-field-flex {
+//  background-color: white;
+//}
+.dropdown-toggle:empty::after {
+  margin-left: 22px;
+  margin-bottom: 8px;
+  width: 9px;
+}
+.btn-outline-primary:hover{
+  color: grey;
+}
