--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -40,9 +40,35 @@
 
     <div *ngIf="this.login === 'email'" class="name-item">
       <div class="label_item">{{'user.phone' | translate}} <span *ngIf="isReqPhone" class="require_star">*</span></div>
-      <div class="input-data">
+      <!-- <div style="width: 80%; display: flex; justify-content: space-between;">
+      <div class="input-data" style="width: 90%;">
         <input style="width: 88%" autocomplete="off" type="text" formControlName="phone" class="input-text">
       </div>
+      <div class="input-data">
+        <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="this.locale">
+          <div *ngIf="this.locale =='vi'">
+            <button *ngIf="this.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
+              id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
+          </div>
+          <div *ngIf="this.locale =='en'">
+            <button *ngIf="this.locale =='en'" class="btn btn-outline-primary db_icon_english"
+              id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
+          </div>
+          <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
+            <div class="switch-language">
+              <button class="db_icon_vietnam" ngbDropdownItem (click)="this.locale = 'vi'">
+                <div class="language">{{ "vie" | translate }}</div>
+              </button>
+            </div>
+            <div class="switch-language">
+              <button class="db_icon_english" ngbDropdownItem (click)="this.locale = 'en'">
+                <div class="language">{{ "eng" | translate }}</div>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
     </div>
 
     <div class="name-item" *ngIf="isReqCardId">
